# EM-compression

./: .gitignore  CMakeLists.txt  README.md  build_script.sh  mgard_4dStem.cpp  run_cmd.txt
